added basic handling of notification permission on tiramisu+

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,16 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/message_for_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/why_notification_permission_is_needed"/>
+    <com.google.android.material.appbar.AppBarLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorAccent" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
         android:id="@+id/notifications_permission_status"
@@ -20,9 +26,15 @@
         android:text="Hello World!" />
 
     <Button
+        android:id="@+id/request_notifications_permission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/request_notifications_permission" />
+
+    <Button
         android:id="@+id/trigger_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/trigger_test_notification"/>
+        android:text="@string/trigger_test_notification" />
 
 </LinearLayout>
